--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -29,6 +29,7 @@
     box-shadow: 0 0 0 5px $complementaryColor;
   }
   &:hover {
+    color: #fff;
     &::before {
       transform: translateX(0) skew(-15deg);
     }
